<resources>
    <string name="app_name">MySmartHome</string>
    <string name="main_home">家居</string>
    <string name="main_mall">商城</string>
    <string name="main_content">内容</string>
    <string name="main_mine">我的</string>
    <string name="main_scene">场景</string>
    <string name="load_image">加载图片</string>
    <string name="clear_image">清除图片</string>
    <string name="mvp_string">MVP架构</string>
    <string name="plant_form">商家</string>
    <string name="header_navigation">列表头部</string>
    <string name="Import">Import</string>
    <string name="Gallery">Gallery</string>
    <string name="slide_show">SlideShow</string>
    <string name="manage">Manage</string>
    <string name="communicate">Communicate</string>
    <string name="share">share</string>
    <string name="send">Send</string>
    <string name="ying">执子之手，与子偕老</string>
    <string name="device_list">设备列表-华为AI音箱</string>
    <string name="search">搜索</string>
    <string name="device_name_hint">设备名称-房间</string>
</resources>