<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/image00"
            android:title="@string/Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/image00"
            android:title="@string/Gallery" />
        <item
            android:id="@+id/nav_slide_show"
            android:icon="@mipmap/image00"
            android:title="@string/slide_show" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/image00"
            android:title="@string/manage" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/image01"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/image01"
                android:title="@string/send" />
        </menu>
    </item>

</menu>